--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
         <div class="col-xs-12 col-md-6 indexmd">
             <div><a href="container_pow.html"><img src="images/Top_md_container-01.jpg" alt="HoschocCONTAINER"></a></div></div>
         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1 indexsl">
-        " We are all you need!"    <div>
-        </div>
+            <div style="white-space:nowrap">
+                " We are all you need!"    
+            </div>
         </div>
     </div>
 </div>
