change some page display on mobile

--- a/Service_PR.html
+++ b/Service_PR.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+           <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -69,7 +69,7 @@
             <li>marketing</li>
 
             <div class="aboutwordh1"><h3>Product Range</h3></div>
-	<li>Comprehensive selection of color make-up:
+            <li>Comprehensive selection of color make-up:</li>
 	<li>Face – protector, foundation, loose and pressed powder, concealer, blusher, primer, bronzer, corrector, etc.</li>
 	<li>Eye – eye shadow, mascara, eyeliner, eyebrow palette, etc.</li>
 	<li>Lip – lipstick, lip gloss, lip balm, lip liner, etc.</li>
