--- a/Service_QA.html
+++ b/Service_QA.html
@@ -15,7 +15,7 @@
 <body >
 <!--選單-->
 <div >
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default " role="navigation">
     <div class="container">
       <!-- 移動顯示 -->
         <div class="navbar-header">
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+           <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -58,10 +58,36 @@
             </ul>
         </div>
         <div class="col-xs-9 col-md-9">
-         <div class="aboutwordh1"><h1>Quality Assurance<br></h1>
+            <div class="aboutwordh1"><h1>Quality Assurance<br></h1></div>
         <div class="aboutwordh1c"><h1>品質保證<br></h1>
-            <img src="images/service_QA.jpg" class="aboutimage img-responsive">
-        </div>
+            <img src="images/service_QA.jpg" class="aboutimage img-responsive hidden-xs"></div>
+        <div class="visible-xs">
+            <div class="aboutwordh1"><h2>Quality Assurance <br></h2></div>
+            <div class="aboutwordh1"><h2>Quality Control <br></h2></div>
+            <div><h4>IQC (In-coming Quality Control)</h4>Quality inspection for in-coming raw materials which are used to make products.
+            <h4>IPQC (In-Process Quality Control) </h4>QC content inspection、Stability / compatibility test、heavy metal test、microbial test、and antimicrobial protection test are performed in the manufacturing steps to assure the safety of the products. 
+            <h4>FQC (Finished Product Quality Control)</h4>FQC is performed to avoid reject products are released to customers. This could protect the credibility of our enterprise and customers.
+            </div>
+            <div class="aboutwordh1"><h2>Quality Management <br></h2></div>
+            <div><h4>Quality Maintenance</h4>Work for product quality performance requirements, including customer、law、regulation requirements.
+            <h4>Instrument Calibration</h4>Instrument calibration is performed periodically to assure the accuracy of instrument measurement and inspection quality.
+            <h4>Environmental Maintenance</h4>Follow the relevant building laws and regulations and maintain the appropriate and adequate distance to avoid pollution and fire.  
+Disinfect workplaces, air filtration systems and manufacturing equipment and equipment periodically. Keep the environment clean and ventilated. Implement  health management thoroughly.
+Quality Control and managemt follow the requirements of ISO 22716:2007 (Cosmetics -- Good Manufacturing Practices (GMP) -- Guidelines on Good Manufacturing Practices).
+            </div>
+            
+             <div class="aboutwordh1c"><h2>品質保證 <br></h2></div>
+            <div class="aboutwordh1c"><h2>品質控管 <br></h2></div>
+            <div><h4>進料檢驗</h4>進貨的原料經由嚴密的檢查加以確認品質。
+            <h4>製程檢驗 </h4>產品生產階段作安定性、安全性檢測、重金屬檢測、及微生物防腐效能試驗，確保產品品質安全無虞。
+            <h4>成品檢驗</h4>防止不合格品流到用戶手中，避免對用戶造成損失，也是為了保護企業的信譽。
+            </div>
+            <div class="aboutwordh1c"><h2>品質管理<br></h2></div>
+            <div><h4>品質維護</h4>致力於品質要求，以達到產品的固有特性滿足顧客、法律、法規等方面所提出的品質要求。
+            <h4>儀器校驗</h4>定期對其使用儀器進行校正確保檢驗品質。
+            <h4>環境維護</h4>依建築相關法規，並與周圍邊界保持足以避免污染及防火需要之適當距離。定期消毒作業場所、空氣過濾系統及製造分裝設備與器具，保持環境潔淨與通風，徹底執行衛生管理。工廠現場管制及管理皆依據國際化粧品法規「化粧品優良製造規範」(ISO 22716:2007)。
+            </div>
+            </div>
             <div style="height:10px;"></div>
                 <img src="images/service_p.jpg"  class="img-responsive aboutimage">
             <div style='height:100px;'></div>
