--- a/Service_SP.html
+++ b/Service_SP.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -64,7 +64,26 @@
              <h4 class="SPword"><li> 設計所有商品形成的起點，由我司業務人員與您經過簡報了解您對產品的要求後，便開始進行產品設計打樣動作，提供給客戶試樣。</li>
             <li>豐富的商品系列，滿足客戶所期望的商品銷售各層次及價位，實現商品化。積極推進各合作方式，從商品設計到內容物、配件、包材的安排，高規格生產製程注重總體客戶的需求量身訂做及代工。</li></h4>
 
-            <img src="images/service_SP.jpg" class="aboutimage img-responsive">
+            <img src="images/service_SP.jpg" class="aboutimage img-responsive hidden-xs">
+            <div class="visible-xs" style="color:red">
+                        </h4><img src="images/service_banner-01.jpg" class="img-responsive">
+
+             <h4>  Customer Consultation 客戶接洽討論
+            <span class="glyphicon glyphicon-chevron-right"></span><br>
+            Market Research for Product Design 市調/產品設計/市場資訊
+             <span class="glyphicon glyphicon-chevron-right"></span><br>
+            Product Trial / Formula Revision / Quotation 試製/修正配方/報價
+             <span class="glyphicon glyphicon-chevron-right"></span><br>
+            Customer Order 客戶確認訂單
+              <span class="glyphicon glyphicon-chevron-right"></span><br>
+            Packaging Design 外包裝設計
+              <span class="glyphicon glyphicon-chevron-right"></span><br>
+            Production 生 產
+              <span class="glyphicon glyphicon-chevron-right"></span><br>
+            Delivery 出 貨
+              <span class="glyphicon glyphicon-chevron-right"></span><br>
+            After-Sales Service 售後服務
+            </div>
          <div style='height:100px;'>
         </div>
     </div>
