--- a/about_CP.html
+++ b/about_CP.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
