--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -82,14 +82,14 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-6 indexmd">
-            <div><a href="formula_LIPS.html"><img src="images/Top_md_formula-01.jpg" alt="HoschocFORMULA"></a></div>
+            <div><a href="formula_LIPS.html"><img src="images/Top_md_formula-01.jpg" alt="HoschocFORMULA" class="img-responsive"></a></div>
         </div>
         <div class="col-xs-12 col-md-6 indexmd">
-            <div><a href="container_pow.html"><img src="images/Top_md_container-01.jpg" alt="HoschocCONTAINER"></a></div></div>
+            <div><a href="container_pow.html"><img src="images/Top_md_container-01.jpg" alt="HoschocCONTAINER" class="img-responsive"></a></div></div>
+         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1 indexsl">
-            <div style="white-space:nowrap">
-                " We are all you need!"    
-            </div>
+            <h1>" We are all you need!"  </h1>
+        <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
         </div>
     </div>
 </div>
