--- a/contactUs.html
+++ b/contactUs.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -81,9 +81,10 @@
     </div>
   </div>
 </form>
+     <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1 indexsl">
-        " We are all you need!"    <div>
-        </div>
+            <h1>" We are all you need!"  </h1>
+        <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
         </div>
     </div>
 </div>
