--- a/container_cre.html
+++ b/container_cre.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+           <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -49,7 +49,7 @@
  <!--內容-->  
 <div class="container">
     <div class="row aboutall">
-        <div class="col-xs-2 col-md-2">
+        <div class="col-xs-4 col-md-2">
             <div class="FOword">Container<br>包材空殼
             </div>
            <ul class="nav nav-pills nav-stacked">
@@ -62,7 +62,7 @@
             </ul>
         </div>
     <!--產品-->
-<div class="col-xs-10 col-md-10">
+<div class="col-xs-8 col-md-10">
      <div class="row">
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
