--- a/formula_EYES.html
+++ b/formula_EYES.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive"></a>
+           <a class="navbar-brand navbar-left" href="index.html"><img src="images/Top_BrandHoschoc_1-01.png" class="img-responsive hidden-xs "><div class="visible-xs" style="color:red" >Hoschoc Cosmetic </div></a>
         </div>
       <!--按鈕內容 -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
@@ -49,7 +49,7 @@
  <!--內容-->  
 <div class="container">
     <div class="row aboutall">
-        <div class="col-xs-2 col-md-2">
+        <div class="col-xs-3 col-md-2">
             <div class="FOword">Formula<br>內料
             </div>
            <ul class="nav nav-pills nav-stacked">
@@ -60,7 +60,7 @@
             </ul>
         </div>
     <!--產品-->
-<div class="col-xs-10 col-md-10">
+<div class="col-xs-9 col-md-10">
 <img src="images/formula/formula_banner_eyeshadow-01.jpg"  class="img-responsive aboutimage">
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
