--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -87,7 +87,7 @@
         <div class="col-xs-12 col-md-6 indexmd">
             <div><a href="container_pow.html"><img src="images/Top_md_container-01.jpg" alt="HoschocCONTAINER" class="img-responsive"></a></div></div>
          <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
-        <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1 indexsl">
+        <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1 indexsl" style="white-space:nowrap">
             <h1>" We are all you need!"  </h1>
         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
         </div>
