--- a/Service_PR.html
+++ b/Service_PR.html
@@ -60,6 +60,7 @@
         <div class="col-xs-9 col-md-9">
         <div class="aboutwordh1"><h1>Product Range<br></h1>
             <h3>Services and Products</h3></div>
+        <div class="aboutinner">
             <li>cosmetics, mixing, filling, packaging</li>
             <li>finished products</li>
             <li>custom formulations</li>
@@ -67,21 +68,24 @@
             <li>OEM & ODM</li>
             <li>R&D</li>
             <li>marketing</li>
-
+        </div>
             <div class="aboutwordh1"><h3>Product Range</h3></div>
+         <div class="aboutinner">   
             <li>Comprehensive selection of color make-up:</li>
 	<li>Face – protector, foundation, loose and pressed powder, concealer, blusher, primer, bronzer, corrector, etc.</li>
 	<li>Eye – eye shadow, mascara, eyeliner, eyebrow palette, etc.</li>
 	<li>Lip – lipstick, lip gloss, lip balm, lip liner, etc.</li>
-
+            </div>
 
         
             <div class="aboutwordh1c"><h1>產品特色<br></h1></div>
             <div class="aboutwordh1"><h3>服務與產品</h3></div>
+        <div class="aboutinnerc">
             提供彩妝OEM & ODM服務，擁有國際品牌肯定的成熟技術。
 從研發企劃到製作生產及行銷，給予一整套完整的專業服務。<br>
             <div class="aboutwordh1"><h3>主要產品</h3></div>
            產品方面包含全系列彩妝：臉部方面的隔離霜、粉底液、蜜粉、亮眸膏、頰彩粉、腮紅、修容粉、遮瑕膏等，與眼妝方面的眼影組合、睫毛膏、眼線液、亮粉等，及唇彩方面的唇膏、唇蜜等。<br>
+            </div>
             
          <div style='height:100px;'></div>
         </div>
