--- a/Service_SP.html
+++ b/Service_SP.html
@@ -65,7 +65,7 @@
             <li>豐富的商品系列，滿足客戶所期望的商品銷售各層次及價位，實現商品化。積極推進各合作方式，從商品設計到內容物、配件、包材的安排，高規格生產製程注重總體客戶的需求量身訂做及代工。</li></h4>
 
             <img src="images/service_SP.jpg" class="aboutimage img-responsive hidden-xs">
-            <div class="visible-xs" style="color:red">
+            <div class="visible-xs PRinner">
                         </h4><img src="images/service_banner-01.jpg" class="img-responsive">
 
              <h4>  Customer Consultation 客戶接洽討論
