--- a/about_CP.html
+++ b/about_CP.html
@@ -58,14 +58,14 @@
             </ul>
         </div>
         <div class="col-xs-9 col-md-9">
-            <img src="images/cpHoschoc-01.png" class="aboutimage img-responsive">
+            <img src="images/cpHoschoc-01.jpg" class="aboutimage img-responsive">
             <img src="images/About_company.jpg" class="aboutimage img-responsive">
         <div class="aboutwordh1"><h1>Company Profile<br></h1>
             <h3>Hoschoc Enterprise Co., Ltd.<br></h3></div>
-           Hoschoc is a brand-new cosmetics manufacturing company stemmed from the success of long-standing Mei Shual Cosmetics Co., Ltd. The first generation founded Mei Shual, the second generation engineered the achievement of over 10 thousand products exported to Europe, America, and Japan. Now, helmed by the mastermind behind this success, the third generation brought the legacy together with a new innovative and dynamic team to launch Hoschoc Enterprise Co., Ltd. in Tainan, Taiwan in 2016.
+            <div class="aboutinner">Hoschoc is a brand-new cosmetics manufacturing company stemmed from the success of long-standing Mei Shual Cosmetics Co., Ltd. The first generation founded Mei Shual, the second generation engineered the achievement of over 10 thousand products exported to Europe, America, and Japan. <br>Now, helmed by the mastermind behind this success, the third generation brought the legacy together with a new innovative and dynamic team to launch Hoschoc Enterprise Co., Ltd. in Tainan, Taiwan in 2016.</div>
         <div class="aboutwordh1c"><h1>公司簡介<br></h1>
             <h3>好思佳粧業股份有限公司<br></h3></div>
-           好思佳的誕生，源自於美帥彩妝代工廠的擴大經營理念，在擁有40年行銷世界的經驗下，產品外銷至歐、美、日等名牌，超過10000多項美妝產品的成績。而今為了讓台灣化妝品的經驗傳承與創新，在長輩的帶領之下由家族第三代獨立在外經營好思佳美妝代工廠，於2016年開始設定在安平工業區建廠，並開始籌組創新活力的工作團隊。
+            <div class="aboutinnerc">好思佳的誕生，源自於美帥彩妝代工廠的擴大經營理念，在擁有40年行銷世界的經驗下，產品外銷至歐、美、日等名牌，超過10000多項美妝產品的成績。而今為了讓台灣化妝品的經驗傳承與創新，在長輩的帶領之下由家族第三代獨立在外經營好思佳美妝代工廠，於2016年開始設定在安平工業區建廠，並開始籌組創新活力的工作團隊。</div>
          <div style='height:100px;'></div>
         </div>
     </div>
