--- a/about_MS.html
+++ b/about_MS.html
@@ -58,25 +58,25 @@
             </ul>
         </div>
         <div class="col-xs-9 col-md-9">
-            <img src="images/About_company.jpg" class="aboutimage img-responsive">
+            <img src="images/msHoschoc-01.jpg" class="aboutimage img-responsive">
         <div class="aboutwordh1"><h1>Missions<br></h1>
         </div>
-           The expert Hoschoc team dares to be bold and delivers unique products. Being professional, diligent, and sincere is the core of our value.
+           <div class="aboutinner">The expert Hoschoc team dares to be bold and delivers unique products. Being professional, diligent, and sincere is the core of our value.
 
-Short-term goal: To create a pleasant working environment that is GMP compliant, enhance efficiency and stabilize quality to add value to our customers.
+            <li>Short-term goal: To create a pleasant working environment that is GMP compliant, enhance efficiency and stabilize quality to add value to our customers.</li>
 
-Mid-term goal: To strengthen company reputation by committing to the well-being of our employees and relationships with our suppliers, and extending it to our customers and the community.
+            <li>Mid-term goal: To strengthen company reputation by committing to the well-being of our employees and relationships with our suppliers, and extending it to our customers and the community.</li>
 
-Long-term goal: To become a key player in the cosmetics manufacturing industry and facilitate Taiwan Excellence into the world.
+               <li>Long-term goal: To become a key player in the cosmetics manufacturing industry and facilitate Taiwan Excellence into the world.</li></div>
 
         <div class="aboutwordh1c"><h1>經營理念<br></h1>
             <h3>『真誠、用心、專業』是好思佳經營團隊的核心價值。<br></h3></div>
-            「好思佳為產品獨特，並且擁有無畏精神的專業團隊」<br>
-           短期目標：為建立舒適溫馨且符合GMP精神的工作環境，提升工作效率與品質穩定，為客戶提供最好的專業與價值。<br>
+            <div class="aboutinnerc">「好思佳為產品獨特，並且擁有無畏精神的專業團隊」<br>
+            <li>短期目標：為建立舒適溫馨且符合GMP精神的工作環境，提升工作效率與品質穩定，為客戶提供最好的專業與價值。</li><br>
 
-中期目標：期盼透過幸福企業文化的理念，將好思佳團隊的用心轉化成美好感受，帶給客戶、供應商、員工、社會大眾等每一位被我們服務的對象，建立企業的鮮明形象與優質聲譽。<br>
+            <li>中期目標：期盼透過幸福企業文化的理念，將好思佳團隊的用心轉化成美好感受，帶給客戶、供應商、員工、社會大眾等每一位被我們服務的對象，建立企業的鮮明形象與優質聲譽。</li><br>
 
-終極目標：將會是好思佳工作團隊的夢想與信仰，憑藉著短中期目標的達成所累積的實力，好思佳得以展現多元創意和行銷革新成為台灣化妝品的代名詞，以台灣品牌的驕傲成為全球美妝業領域的佼佼者。
+            <li>終極目標：將會是好思佳工作團隊的夢想與信仰，憑藉著短中期目標的達成所累積的實力，好思佳得以展現多元創意和行銷革新成為台灣化妝品的代名詞，以台灣品牌的驕傲成為全球美妝業領域的佼佼者。</lil></div>
 
          <div style='height:100px;'></div>
         </div>
