--- a/about_FE.html
+++ b/about_FE.html
@@ -60,18 +60,18 @@
         <div class="col-xs-9 col-md-9">
             <img src="images/About_factory.jpg" class="aboutimage img-responsive">
             <div style='height:10px;'></div>
-             <img src="images/About_factory1.jpg" class="aboutimage img-responsive">
+             <img src="images/About_factory_1.jpg" class="aboutimage img-responsive">
         <div class="aboutwordh1"><h1>Facility and Equipment<br></h1>
         </div>
-          The 3,960m2 factory is designed with GMP compliance and is expected to be GMP and ISO certified by Q3 of 2017. 1300m2 of office and storage space is built with the needs of market development and design and the storage security of products and confidential formulas.<br>
-	The factory is equipped with powder, ointment, and emulsion manufacturing, dry and wet powder pressing, lipstick and liquid filling, and R&D laboratory facilities.
+        <div class="aboutinner">  The 3,960m2 factory is designed with GMP compliance and is expected to be GMP and ISO certified by Q3 of 2017. 1300m2 of office and storage space is built with the needs of market development and design and the storage security of products and confidential formulas.<br>
+            The factory is equipped with powder, ointment, and emulsion manufacturing, dry and wet powder pressing, lipstick and liquid filling, and R&D laboratory facilities.</div>
 
 
         <div class="aboutwordh1c"><h1>設備規劃<br></h1>
             </div>
-            廠房：1200坪廠房是以GMP製造精神做設計，將會在創立2017年第三季完成GMP與ISO等國際認證。400坪辦公室及倉庫則以市場開發與設計人員需求為設計，並以安全存放成品與配方等機密需求為設計。<br>
+            <div class="aboutinnerc">廠房：1200坪廠房是以GMP製造精神做設計，將會在創立2017年第三季完成GMP與ISO等國際認證。400坪辦公室及倉庫則以市場開發與設計人員需求為設計，並以安全存放成品與配方等機密需求為設計。<br>
 
-設備：分為電腦系統及生產系統，電腦系統為鼎新ERP系統輔助，將以管理角度打造智慧工廠提升生產效率。另生產系統，就粉類製造、油膏類製造、乳化類製造，分別備有調製配方相關設備、壓製乾粉產品設備、壓製濕粉產品設備、灌製口紅產品設備、灌製液態產品設備、實驗與研發相關設備，設備規劃上以近千萬元價值的機台設備於廠內生產製造。
+                設備：分為電腦系統及生產系統，電腦系統為鼎新ERP系統輔助，將以管理角度打造智慧工廠提升生產效率。另生產系統，就粉類製造、油膏類製造、乳化類製造，分別備有調製配方相關設備、壓製乾粉產品設備、壓製濕粉產品設備、灌製口紅產品設備、灌製液態產品設備、實驗與研發相關設備，設備規劃上以近千萬元價值的機台設備於廠內生產製造。</div>
 
 
          <div style='height:100px;'></div>
