--- a/contactUs.html
+++ b/contactUs.html
@@ -55,32 +55,11 @@
         <div class="aboutwordh1c"><h3>有任何問題，歡迎與我們聯繫。<br></h3>
            </div>
             <br>
-        <form class="form-horizontal" role="form" 
-              action="mailto:service@hoschoc.com" method="post">
-<div class="form-group">
-    <label for="text" class="col-sm-2 control-label">Name名字</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" placeholder="Name您的名字">
-    </div>
-  </div>  
-<div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">E-mail電子郵件</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="E-mail輸入電子郵件">
-    </div>
-  </div>
-<div class="form-group">
-    <label for="text"  class="col-sm-2 control-label">Message留言</label>
-    <div class="col-sm-10">
-      <textarea class="form-control" rows="3" placeholder="Message您的留言"></textarea>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Send寄出</button>
-    </div>
-  </div>
-</form>
+            
+   <div class="aboutwordh1">
+       <h3><a href="mailto:service@hoschoc.com">service@hoschoc.com</a></h3>        
+            </div>
+    
      <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1" style="height:150px"></div>
         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1 indexsl">
             <h1>" We are all you need!"  </h1>
