--- a/try.html
+++ b/try.html
@@ -40,3 +40,31 @@
         <div class="col-lg-3">ABA</div>
     </div>
 </body>
+
+
+    <form class="form-horizontal" role="form" 
+              action="mailto:service@hoschoc.com" method="post">
+<div class="form-group">
+    <label for="text" class="col-sm-2 control-label">Name名字</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" placeholder="Name您的名字">
+    </div>
+  </div>  
+<div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">E-mail電子郵件</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="E-mail輸入電子郵件">
+    </div>
+  </div>
+<div class="form-group">
+    <label for="text"  class="col-sm-2 control-label">Message留言</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" rows="3" placeholder="Message您的留言"></textarea>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Send寄出</button>
+    </div>
+  </div>
+</form>
