--- a/about_FE.html
+++ b/about_FE.html
@@ -4,15 +4,28 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Hoschoc Cosmetics 好思佳粧業股份有限公司</title>
 <meta name="description" content="Welcome to Hoschoc Cosmetics! We are the cosmetics manufacturing from Taiwan! 歡迎來到好思佳粧業股份有限公司! 我們是臺灣化妝品研發彩妝工廠，很高興為您服務!">
-<meta name="keywords" content="cosmetic, cosmetics, Taiwan, factory, OEM, ODM, makeup, packaging, manufacturing, Tainan, Hoschoc, made in taiwan, ">
+<meta name="keywords" content="cosmetic, cosmetics, makeup, beauty, factory, OEM, ODM, manufacturing, manufacturing company, Taiwan Cosmetics maufacturing, Tainan, Hoschoc, made in taiwan, MIT, Hoschoc cosmeitcs, cosmetics factory, 化妝品工廠, 彩妝工廠, 台灣彩妝工廠, ">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/bootstrap.css" rel="stylesheet" >
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link rel="shortcut icon"
+      href="images/hoscocicon.ico">
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/bootstrap.js"></script>
-  </head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5ZFM2PH');</script>
+<!-- End Google Tag Manager -->
+    </head>
 <body >
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZFM2PH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!--選單-->
 <div >
 <nav class="navbar navbar-default" role="navigation">
@@ -63,13 +76,13 @@
              <img src="images/About_factory_1.jpg" class="aboutimage img-responsive">
         <div class="aboutwordh1"><h1>Facility and Equipment<br></h1>
         </div>
-        <div class="aboutinner">  The 3,960m2 factory is designed with GMP compliance and is expected to be GMP and ISO certified by Q3 of 2017. 1300m2 of office and storage space is built with the needs of market development and design and the storage security of products and confidential formulas.<br>
+        <div class="aboutinner">  The 3,960m2 factory is designed with GMP compliance and is expected to be GMP and ISO certified by Q3 of 2017. 1500m2 of office and storage space is built with the needs of market development and design and the storage security of products and confidential formulas.<br>
             The factory is equipped with powder, ointment, and emulsion manufacturing, dry and wet powder pressing, lipstick and liquid filling, and R&D laboratory facilities.</div>
 
 
         <div class="aboutwordh1c"><h1>設備規劃<br></h1>
             </div>
-            <div class="aboutinnerc">廠房：1200坪廠房是以GMP製造精神做設計，將會在創立2017年第三季完成GMP與ISO等國際認證。400坪辦公室及倉庫則以市場開發與設計人員需求為設計，並以安全存放成品與配方等機密需求為設計。<br>
+            <div class="aboutinnerc">廠房：1500坪廠房是以GMP製造精神做設計，將會在創立2017年第三季完成GMP與ISO等國際認證。400坪辦公室及倉庫則以市場開發與設計人員需求為設計，並以安全存放成品與配方等機密需求為設計。<br>
 
                 設備：分為電腦系統及生產系統，電腦系統為鼎新ERP系統輔助，將以管理角度打造智慧工廠提升生產效率。另生產系統，就粉類製造、油膏類製造、乳化類製造，分別備有調製配方相關設備、壓製乾粉產品設備、壓製濕粉產品設備、灌製口紅產品設備、灌製液態產品設備、實驗與研發相關設備，設備規劃上以近千萬元價值的機台設備於廠內生產製造。</div>
 
