--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Hoschoc Cosmetics 好思佳粧業股份有限公司</title>
 <meta name="description" content="Welcome to Hoschoc Cosmetics! We are the cosmetics manufacturing from Taiwan! 歡迎來到好思佳粧業股份有限公司! 我們是臺灣化妝品研發彩妝工廠，很高興為您服務!">
-<meta name="keywords" content="cosmetic, cosmetics, Taiwan, factory, OEM, ODM, makeup, packaging, manufacturing, Tainan, Hoschoc, made in taiwan, ">
+<meta name="keywords" content="cosmetic, cosmetics, makeup, beauty, factory, OEM, ODM, manufacturing, manufacturing company, Taiwan Cosmetics maufacturing, Tainan, Hoschoc, made in taiwan, MIT, Hoschoc cosmeitcs, cosmetics factory, 化妝品工廠, 彩妝工廠, 台灣彩妝工廠, ">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/bootstrap.css" rel="stylesheet" >
 <link href="css/style.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link rel="shortcut icon"
+      href="images/hoscocicon.ico">
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/bootstrap.js"></script>
-  </head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5ZFM2PH');</script>
+<!-- End Google Tag Manager -->
+    </head>
 <body >
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZFM2PH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!--選單-->
 <div >
 <nav class="navbar navbar-default" role="navigation">
@@ -63,6 +76,11 @@
     </div>
     <div class="item">
       <img src="images/TOP_photo_A2.jpg" alt="Hoschoc Formula"  class="indeximage">
+      <div class="carousel-caption">
+      </div>
+    </div>
+      <div class="item">
+      <img src="images/TOP_photo_A3.jpg" alt="Thank you for coming COSMOPROF"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
