--- a/try.html
+++ b/try.html
@@ -5,6 +5,7 @@
 <title>Hoschoc Cosmetics 好思佳粧業股份有限公司</title>
 <meta name="description" content="臺灣化妝品研發彩妝工廠">
 <link rel="stylesheet" href="./css/bootstrap.min.css">
+<link href="css/style.css" rel="stylesheet">
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-3.1.1.min.js"></script>
 </head>
@@ -43,11 +44,12 @@
 
 
     <form class="form-horizontal" role="form" 
-              action="mailto:service@hoschoc.com" method="post">
+              action="hoschocback.php" method="post">
 <div class="form-group">
     <label for="text" class="col-sm-2 control-label">Name名字</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" placeholder="Name您的名字">
+      <input type="text" class="form-control"
+        name="name"     placeholder="Name您的名字">
     </div>
   </div>  
 <div class="form-group">
