--- a/contact_us.html
+++ b/contact_us.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Contact Us l Hoschoc Cosmetics Taiwan Cosmetic manufacturers</title>
 <meta name="description" content="Please don't hesitate to contact us if you have any questions.">
-<meta name="keywords" content="cosmetic, cosmetic manufacturers, makeup manufacturers, makeup factory, makeup supplies, cosmetic company, cosmetic factory,">
+<meta name="keywords" content="hoschoc, hoschoc cosmetic manufacturers, makeup manufacturers, makeup factory, cosmetic company, cosmetic factory,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
