--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Hoschoc Cosmetics l Taiwan Cosmetic manufacturers</title>
 <meta name="description" content="Hoschoc is a cosmetics manufacturing company. We are experienced in supplying cosmetic products that satisfies every expectation of you.">
-<meta name="keywords" content="cosmetic, cosmetic manufacturers, makeup manufacturers, makeup factory, makeup supplies, cosmetic company, cosmetic factory,">
+<meta name="keywords" content="cosmetic manufacturer, makeup manufacturer, makeup factory, makeup supplies, cosmetic company, cosmetic factory,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
@@ -109,26 +109,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="container">
     <div class="row">
         <div class="col-xs-12 indexin">
-            <div class="hidden-xs col-md-7 indexinin">
+            <article class="hidden-xs col-md-7 indexinin">
                 <h1>Hoschoc Cosmetics</h1>
                 <h4 style="line-height: 24px">Hoschoc is a brand-new cosmetics manufacturing company.<br> We are experienced in supplying a wide range of cosmetic products at different levels and prices that satisfies every expectation of you.<br><br>
                     <a href="about_us.html" style="color:white;" ><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>more...</a></h4>
         
-            </div>
-             <div class="visible-xs col-xs-12 indexininxs">
+            </article>
+             <article class="visible-xs col-xs-12 indexininxs">
                 <h1>Hoschoc Cosmetics</h1>
                 <h4 style="line-height: 24px">Hoschoc is a brand-new cosmetics manufacturing company.<br> We are experienced in supplying a wide range of cosmetic products at different levels and prices that satisfies every expectation of you.<br><br>
                 <a href="about_us.html" style="color:white;" ><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>more...</a>
                  </h4>
                 
-            </div>
+            </article>
         </div>
         <div class="col-xs-12 indexformula">
             <a href="formula_LIPS.html">
             <div class="hidden-xs col-md-6">
             <img src="images/indexformula.png" class="img-responsive" alt="FORMULA">    </div>
             <div class="hidden-xs col-md-6 indexformulaword">
-                <H1 style="color:red"><strong>COSMETIC FORMULA</strong></H1>           
+                <H2 style="color:red"><strong>COSMETIC FORMULA</strong></H2>           
                 <br><p> Our R&D team provides the best formulations and can customize to your needs. <br><br>
                 <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>more
                 </p>  
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-xs-12 indexpacking">
             <a href="container_pow.html">
               <div class="hidden-xs col-md-6 indexformulaword">
-            <H1 style="color:red"><strong>COSMETIC CONTAINER</strong></H1>           
+            <H2 style="color:red"><strong>COSMETIC CONTAINER</strong></H2>           
                 <br><p>We have an independent department dedicated to innovative and customizable design proposals. <br><br>
                 <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>more
                 </p>  
