--- a/our_service.html
+++ b/our_service.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Our Serivce l Hoschoc Cosmetics Taiwan Cosmetic manufacturers</title>
 <meta name="description" content="Hoschoc is a cosmetics manufacturing company. We are experienced in supplying cosmetic products that satisfies every expectation of you.">
-<meta name="keywords" content="cosmetic, cosmetic manufacturers, makeup manufacturers, makeup factory, makeup supplies, cosmetic company, cosmetic factory,">
+<meta name="keywords" content="cosmetic, cosmetic manufacturers, makeup manufacturers, makeup factory, cosmetic company, cosmetic factory,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
