--- a/formula_EMascara.html
+++ b/formula_EMascara.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Mascara Formula l Hoschoc Cosmetics</title>
 <meta name="description" content="Hoschoc is a cosmetics manufacturing company. Our R&D team provides the best formulations and can customize to your needs.">
-<meta name="keywords" content="mascara, cosmetic manufacturers, makeup manufacturers, makeup factory, makeup supplies, cosmetic company, cosmetic factory,">
+<meta name="keywords" content="mascara, long-wear, makeup factory,  cosmetic company, cosmetic factory,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
