--- a/formula_LIPS.html
+++ b/formula_LIPS.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Lipstick / Lip Gloss Formula l Hoschoc Cosmetics  </title>
 <meta name="description" content="Hoschoc is a cosmetics manufacturing company. Our R&D team provides the best formulations and can customize to your needs.">
-<meta name="keywords" content="lipstick, lip gloss, lip blam, cosmetic manufacturers, makeup manufacturers, makeup factory, makeup supplies,">
+<meta name="keywords" content="lipstick, lip gloss, lip blam, lip color, lip pencil, lip care,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
