--- a/twformula_Eyebrow.html
+++ b/twformula_Eyebrow.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>內料-唇部 l 好思佳粧業</title>
+<title>內料-眉彩 l 好思佳粧業</title>
 <meta name="description" content="好思佳為一家臺灣化妝品美妝工廠，豐富的商品系列，滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。">
-<meta name="keywords" content="唇彩, 化妝品工廠, 口紅, 唇蜜, 化妝品製造商, 彩妝工廠, 彩妝製造商,">
+<meta name="keywords" content="眉彩, 眉筆, 眉粉, 眉膏,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
