--- a/twformula_FConcealer.html
+++ b/twformula_FConcealer.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>內料-遮瑕/修飾 l 好思佳粧業</title>
 <meta name="description" content="好思佳為一家臺灣化妝品美妝工廠，豐富的商品系列，滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。">
-<meta name="keywords" content="遮瑕膏, 遮瑕液, 遮瑕筆, 修飾霜, 化妝品製造商, 彩妝工廠, 彩妝製造商,">
+<meta name="keywords" content="遮瑕膏, 遮瑕液, 遮瑕筆, 修飾霜,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
