--- a/twindex.html
+++ b/twindex.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>好思佳粧業股份有限公司</title>
 <meta name="description" content="好思佳為一家臺灣化妝品美妝工廠，豐富的商品系列，滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。">
-<meta name="keywords" content="化妝品, 化妝品工廠, iso22716, GMP, 化妝品製造商, 彩妝工廠, 彩妝製造商,">
+<meta name="keywords" content="化妝品, 化妝品工廠, iso22716, GMP, 化妝品製造商, 彩妝製造商,">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Hoschoc Cosmetics">
 <link rel="author" href="google plus www.hoschoc.com/posts">
@@ -128,7 +128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="hidden-xs col-md-6">
             <img src="images/indexformula.png" class="img-responsive" alt="FORMULA">    </div>
             <div class="hidden-xs col-md-6 twindexformulaword">
-                <H1 style="color:red"><strong>化妝品內料</strong></H1>           
+                <H2 style="color:red"><strong>化妝品內料</strong></H2>           
                 <br><p> 擁有良好的研發團隊，提供您最新最好的內料需求，並能依據您的需求修改。<br><br>
                 <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>了解更多
                 </p>  
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-xs-12 indexpacking">
             <a href="twcontainer_pow.html">
               <div class="hidden-xs col-md-6 twindexformulaword">
-            <H1 style="color:red"><strong>化妝品空殼</strong></H1>           
+            <H2 style="color:red"><strong>化妝品空殼</strong></H2>           
                 <br><p>擁有獨立的設計部門，不僅提供您創新的設計提案，且能依照您的需求修改。<br><br>
                 <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>了解更多
                 </p>  
