--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <meta property="og:type" content="Website">
 <meta property="og:description" content="Hoschoc is a cosmetics manufacturing company. We are experienced in supplying a wide range of products at different levels and prices that satisfies every expectation of you.">
 <!-- facebook -->  
+<link rel="alternate" hreflang="zh-Hant" href="https://www.hoschoc.com/twindex.html" />
 <script src="js/jquery-1.11.2.min.js" async></script>
 <script src="js/bootstrap.js" async></script>
 <!-- Google Tag Manager -->
