--- a/twindex.html
+++ b/twindex.html
@@ -79,17 +79,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
+      <img src="images/index_topbanner_4.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
+      <div class="carousel-caption">
+      </div>
+      </div>
+    <div class="item">
       <img src="images/index_topbanner_1.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
     <div class="item">
-      <img src="images/index_topbanner_2.jpg" alt="Hoschoc Formula"  class="indeximage">
-      <div class="carousel-caption">
-      </div>
-    </div>
-      <div class="item">
-      <img src="images/index_topbanner_3.jpg" alt="Thank you for coming COSMOPROF"  class="indeximage">
+      <img src="images/index_topbanner_3.jpg" alt="Hoschoc Formula"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
