--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="images/index_topbanner_1.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
-      <div class="carousel-caption">
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/index_topbanner_2.jpg" alt="Hoschoc Formula"  class="indeximage">
+     <div class="item active">
+      <img src="images/index_topbanner_4.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
       <div class="item">
-      <img src="images/index_topbanner_3.jpg" alt="Thank you for coming COSMOPROF"  class="indeximage">
+      <img src="images/index_topbanner_1.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
+      <div class="carousel-caption">
+      </div>
+    </div>
+      <div class="item">
+      <img src="images/index_topbanner_3.jpg" alt="Hoschoc formula"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
