--- a/twnews.html
+++ b/twnews.html
@@ -82,13 +82,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h4 class="panel-title">
         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/11/14-16 COSMOPACK 亞太區美容展 Hall 3-D23 </h4>
+                2017/12 聖誕與新年快樂!! </h4>
         </a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
-        Come and meet us!
+          <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
+        好思佳團隊，祝您有個美好的新年!
+      </div>
+    </div>
+  </div>
+ <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+           <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+               2017/11/14-16 COSMOPACK 亞太區美容展 Hall 3-D23</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        Thank you for coming.<br>We look forward to our next meeting.
       </div>
     </div>
   </div>
