--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-     <div class="item active">
-      <img src="images/index_topbanner_4.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
+    <div class="item active">
+      <img src="images/index_topbanner_5.jpg" alt="2017 Merry Christmas" class="indeximage">
       <div class="carousel-caption">
       </div>
-    </div>
-      <div class="item">
-      <img src="images/index_topbanner_1.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
+      </div>
+     <div class="item">
+      <img src="images/index_topbanner_4.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
@@ -174,6 +174,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3><strong>NEWS</strong></h3>
             
         </div>
+            <div class="col-xs-12 col-md-4 indexnews">
+            <a href="news.html" style="text-decoration:none; color:black;"> 
+            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2017/12</h4>
+            <h5>Merry Christmas!<br>
+                and Happy New Year</h5>
+            </a></div>
         <div class="col-xs-12 col-md-4 indexnews">
             <a href="news.html" style="text-decoration:none; color:black;">
                <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
@@ -187,13 +194,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2017/3/17-20</h4>
             <h5>COSMOPROF WORLDWIDE BOLOGNA <br>Hall 29A Booth D10</h5>
-            </a></div>
-        <div class="col-xs-12 col-md-4 indexnews">
-            <a href="news.html" style="text-decoration:none; color:black;"> 
-            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/3</h4>
-            <h5>Welcome to Hoschoc!<br>
-                We have own cosmetic factory in Taiwan.</h5>
             </a></div>
     </div></div>
 
