--- a/news.html
+++ b/news.html
@@ -77,18 +77,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="aboutwordh1"><h1><strong>News</strong><br></h1>
             </div>   
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+     <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
          <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/11/14-16 COSMOPACK ASIA HONG KONG Hall 3-D23 </h4>
+                2017/12 Merry Christmas and Happy New Year! </h4>
         </a>
       </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+    <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
       <div class="panel-body">
-        Come and meet us!
+          <img src="images/index_topbanner_5.jpg" class="img-responsive" alt="merry x'mas">
+          May the season's joy fill you all the year round. 
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+           <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2017/11/14-16 COSMOPACK ASIA HONG KONG Hall 3-D23</h4>
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+      <div class="panel-body">
+        Thank you for coming.<br>We look forward to our next meeting.
       </div>
     </div>
   </div>
