--- a/twnews.html
+++ b/twnews.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111689434-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111689434-1');
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>最新消息 l 好思佳粧業</title>
 <meta name="description" content="好思佳為一家臺灣化妝品美妝工廠，豐富的商品系列，滿足客戶所期望的，我們竭盡所能的提供您各種彩妝與化妝品需求。">
