--- a/about_us.html
+++ b/about_us.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111689434-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111689434-1');
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>About Hoschoc l Hoschoc Cosmetics Taiwan Cosmetic manufacturers</title>
 <meta name="description" content="We offer cosmetic OEM/ODM and custom productions at the highest standard to meet the needs of our customers.">
