--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111689434-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111689434-1');
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Hoschoc Cosmetics l Taiwan Cosmetic manufacturers</title>
 <meta name="description" content="Hoschoc is a cosmetics manufacturing company. We are experienced in supplying cosmetic products that satisfies every expectation of you.">
