--- a/twindex.html
+++ b/twindex.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
       <div class="item active">
-      <img src="images/index_topbanner_5.jpg" alt="2017 Merry Christmas" class="indeximage">
+      <img src="images/index_topbanner_6.jpg" alt="Hoschoc COSMOPROF 29A B2" class="indeximage">
       <div class="carousel-caption">
       </div>
       </div>
