--- a/our_service.html
+++ b/our_service.html
@@ -137,7 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <br><br>
             <img src="images/service_qc_1.jpg"  class="img-responsive aboutimage" alt="qcphoto">
          <br>
-                  <img src="images/About_inside.jpg" class="aboutimage img-responsive">
+                  <img src="images/about_inside.jpg" class="aboutimage img-responsive">
          <div style='height:180px;'></div>
         <a id="sec3"></a>
          <div class="aboutwordh1"><h1>Product Range<br></h1>
