--- a/twour_service.html
+++ b/twour_service.html
@@ -144,7 +144,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 工廠現場管制及管理皆依據國際化粧品法規「化粧品優良製造規範」(ISO 22716:2007)。</p></h5>
          
             <img src="images/service_qc_1.jpg"  class="img-responsive aboutimage" alt="qcphoto"><br>
-           <img src="images/About_inside.jpg" class="aboutimage img-responsive">
+           <img src="images/service_qc_2.jpg" class="img-responsive aboutimage"">
          <div style='height:180px;'></div>
         <a id="sec3"></a>
          <div class="twaboutwordh1"><h1>產品列表<br></h1>
