--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/index_topbanner_6.jpg" alt="Hoschoc COSMOPROF 29A B2" class="indeximage">
+      <img src="images/index_topbanner_7.jpg" alt="Hoschoc beautyworld middle east sa-b18" class="indeximage">
       <div class="carousel-caption">
       </div>
       </div>
      <div class="item">
-      <img src="images/index_topbanner_4.jpg" alt="Hoschoc COSMOPROF Hall 3 D23" class="indeximage">
+      <img src="images/index_topbanner_6.jpg" alt="Hoschoc COSMOPROF 29a/b2" class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
