--- a/about_us.html
+++ b/about_us.html
@@ -132,7 +132,7 @@ Mr. Shen led the family-owned business successfully to become one of the leading
 <br><br>
             <b>In 2015</b>, Mr. Shen is ready to take on the world of cosmetics manufacturing with his very own Hoschoc Enterprise Co., Ltd. We strive to continually advance our teams in product development (including packaging, catalog, and display cases), formula development, sales and services, and regulation compliance. Our team is young yet with enough experience to help our clients with any product related questions and meet their requirements.  
 <br><br>
-            <b>In 2018</b>, the factory is nearing its completion and our team has undergone a year’s program of ISO and ERP (computerized). We are expecting to become ISO 22716 and GMP certified in May and October, respectively, to give our clients speedy and competitive services!
+            <b>In 2018</b>,  our factory is ISO22716 certified, with SA8000 certification expected by the end of the year. We'll continue to grow and improve our capabilities and qualifications to give our clients speedy and competitive services!
 </section></h4>
 
          <div style='height:100px;'></div>
