--- a/twabout_us.html
+++ b/twabout_us.html
@@ -121,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            <h4><section class="twaboutinner"> 
     &nbsp;&nbsp;&nbsp;&nbsp;為此我們經歷二年建設，完成了占地5000ｍ２的廠房（使用面積8000ｍ２）及10萬級空氣淨化潔淨空間，我們除了引進國際先進生產設備及檢測儀器更聚集為各項這個領域專精人才<br><br>
     &nbsp;&nbsp;&nbsp;&nbsp;我們創辦人Attlle Shen在台灣更是少數擁有工廠管理、產品設計及品牌整合的完整35年資歷(至2018年5月止)10歲因為父親辦廠而啟蒙化妝品的製造，83年正式投身這個行業而且偕同父親進行了企業改造工作(制度化、自動化)使公司獲利呈倍數成長，完成第一階段資金累積工作，92年率先海外設廠大大增加企業競爭力，曾二次將這個家族企業推向領導地位(90年及2000年)，03變換角色不做生產卻在幾年間透過其整合能力讓日本一家便宜百元店的化妝品起死回生，甚至其幾項產品均打敗各大品牌位居排行榜前三名，造成轟動及廣大話題，在其領到下我們不斷精進團隊，我們產品開發設計(含包材、目錄、展架等)、內料研發、財務支援(成本核計、電腦化)、業務及服務團隊(法規)，雖然年輕(40歲以下)但也均具至少6年以上這個領域的臨場經驗足以解決客戶任何產品上問題及滿足客戶各項要求。<br><br>
-    &nbsp;&nbsp;&nbsp;&nbsp;雖然工廠新近完工投產，但我們人員已歷經一年ERP及ISO培訓，我們很有信心在5月底取得ISO22716認證、10月底GMP認證及透過ERP電腦化執行，能提供客戶更為迅速確實及具競爭力的服務!
+    &nbsp;&nbsp;&nbsp;&nbsp;為了保證品質與管理，我們已於2018年通過ISO22716與ISO9001認證、並計畫依序執行SA8000認證流程，並藉由ERP電腦化執行，邁向工業4.0與大數據時代的目標，提供客戶更為迅速確實及具競爭力的服務!
 </section></h4>
              <div style='height:100px;'></div>
             
