--- a/twindex.html
+++ b/twindex.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
       <div class="item active">
-      <img src="images/index_topbanner_9-01.jpg" alt="Our factory is ISO22716 & ISO9001 certified!">
+      <img src="images/index_topbanner_3-01.jpg" alt="Hoschoc Formula">
       <div class="carousel-caption">
       </div>
       </div>
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       </div>
     <div class="item">
-      <img src="images/index_topbanner_3.jpg" alt="Hoschoc Formula"  class="indeximage">
+      <img src="images/index_topbanner_7.jpg" alt="Hoschoc Formula"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
