--- a/twindex.html
+++ b/twindex.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
       <div class="item active">
-      <img src="images/index_topbanner_3.jpg" alt="Hoschoc Formula">
+      <img src="images/index_topbanner_10.jpg" alt="好思佳已通過ISO 22716 &ISO 9001專業認證">
       <div class="carousel-caption">
       </div>
       </div>
@@ -179,29 +179,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row">
         <div class="col-xs-12 twindexnewsb">
             <h3><strong>最新消息</strong></h3>
-            
         </div>
-          <div class="col-xs-12 col-md-4 indexnews">
-            <a href="news.html" style="text-decoration:none; color:black;"> 
+           <div class="col-xs-12 col-md-4 indexnews">
+            <a href="twnews.html" style="text-decoration:none; color:black;">
+               <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/7/2</h4>
+            <h5>好思佳已通過ISO22716 & ISO9001專業認證!<br>
+             </h5>
+            </a></div>
+             <div class="col-xs-12 col-md-4 indexnews">
+            <a href="twnews.html" style="text-decoration:none; color:black;"> 
+            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/5/8-10</h4>
+            <h5>beautyworld MIDDLE EAST<br>
+                SA-B18</h5>
+            </a></div>
+           <div class="col-xs-12 col-md-4 indexnews">
+            <a href="twnews.html" style="text-decoration:none; color:black;"> 
             <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/3/16-19</h4>
             <h5>COSMOPROF WORLDWIDE BOLOGNA<br>
                 Hall 29A Booth B2</h5>
-            </a></div>
-         <div class="col-xs-12 col-md-4 indexnews">
-            <a href="news.html" style="text-decoration:none; color:black;"> 
-            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/12</h4>
-            <h5>Merry Christmas!<br>
-                and Happy New Year</h5>
-            </a></div>
-        <div class="col-xs-12 col-md-4 twindexnews">
-            <a href="twnews.html" style="text-decoration:none; color:black;">
-               <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/11/14-16</h4>
-            <h5>COSMOPACK 亞太區美容展<br>
-                Hall 3-D23</h5>
-        
             </a></div>
     </div></div>
 
